header y menu en todas las resoluciones

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <link rel="stylesheet" href="./styles/indStyles.css">
     <link rel="stylesheet" href="./styles/indMain.css">
     <link rel="stylesheet" href="./mediaCSS/DraLGS-tablet.css" media="(min-width: 600px)">
-    <link rel="stylesheet" href="./mediaCSS/DraLGS-big.css" media="(min-width: 950px)">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-big.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-big.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-size-plus.css" media="(min-width: 1900px)">
 </head>
 
 <body>
     <header>
         <div class="header_menu">
-            <h1>LAURA GUADALETE</h1>
+            <h1>Dra. LAURA GUADALETE SOUSA</h1>
             <p>Odontóloga - Ortodoncista</p>
             <div class="menu">
                 <span class="line1__bars-menu"></span>
