--- a/index.html
+++ b/index.html
@@ -103,12 +103,82 @@
     <main>
         <section class="profile_picture-under">
             <div class="profile_picture">
+                <span class="orange_circle"></span>
+                <span class="pink_tiny_circle to_right"></span>
+                <span class="pink_tiny_circle to_left"></span>
+                <div class="orange_tiny_circle">
+                    <div class="white_circle"></div>
+                </div>
                 <span class="black_back"> </span>
                 <img src="./image/risueñaSinFondo.png" alt="foto de LAURA">
-                <h2>Dra. Laura Guadalete Sousa</h2>
-                <p>Lider en el sector de la ortodoncia,
-                    especializada en ortodoncia invisible 
-                    y experta en estética dentofacial.</p>
+    
+            </div>
+            <div class="profile_information_content">
+                <div class="contente_description">
+                    <p>Lider en el sector de la ortodoncia,
+                        especializada en ortodoncia invisible 
+                        y experta en estética dentofacial.
+                    </p>
+                </div>
+                <div class="formation_experience_attention">
+                    <div class="card_content formation">
+                        <div class="description_card">
+                            <img src="/icons/book.svg" alt="" class="formation_icon">
+                            <p>Formación</p>
+                        </div>
+                        <span class="line_separator"></span>
+                        <div class="formation_description">
+                            <ul>
+                                <li>- Licenciada en Odontología.</li>
+                                <li>- Postgrado de Ortodoncia. </li>
+                                <li>- Máster de Ortodoncia Invisible.</li>
+                                <li>- Master en endodoncia.</li>
+                                <li>- Odontopediatría y Traumatología Dental</li>
+                                <li>- Curso de Estética en Prótesis Fija</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <div class="card_content experience">
+                        <div class="description_card">
+                            <img src="/icons/dentist-tooth.svg" alt="" class="formation_icon">
+                            <p>Experiencia</p>
+                        </div>
+                        <span class="line_separator"></span>
+                        <div class="formation_description">
+                            <ul>
+                                <li>- 10 años como dentista general.</li>
+                                <li>- 8 años como ortodoncista</li>
+                                <li>- 5 años como dentista general y ortodoncista en Francia.</li>
+                                <li>- 4 años como Dentista general y ortodoncista en Neofacial.</li>
+                            </ul>
+                            
+                        </div>
+                    </div>
+                    <div class="card_content attention">
+                        <div class="description_card">
+                            <img src="/icons/map-point.svg" alt="" class="formation_icon">
+                            <p>Atención</p>
+                        </div>
+                        <span class="line_separator"></span>
+                        <div class="formation_description">
+
+                            <ul class="atention_list_element">
+                                <li><strong>- Dirección</strong></li>
+                                <li>Ave París, 24. 10005, Cáceres (Extremadura, España)</li>
+                                <li><strong>- Telefono</strong></li>
+                                <li>927 153 868</li>
+                                <li><strong>- WhatsApp</strong></li>
+                                <li>645 33 79 89</li>
+                            </ul>
+
+                            <div class="button_email" id="emailButton">
+                                <img src="/icons/gmail-icon-pink.svg" alt="">
+                                <p>Contactar</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="photoF_bigLGS">
                 <object data="./image/seriaSinFondo.png" class="LGS" type=""></object>
@@ -121,11 +191,11 @@
             </div>
         </section>
         <section class="about">
-            <div class="nav-items">
+            <!-- <div class="nav-items">
                 <a class="nav_icons" href="#"><img src="./icons/linkedin.svg" alt=""></a>
                 <a class="nav_icons" href="#"><img src="./icons/mail.svg" alt=""></a>
                 <a class="nav_icons" href="#"><img src="./icons/whatsapp.svg" alt=""></a>
-            </div>
+            </div> -->
             <div class="paragraph_continer">
                 <p>La<h3>Dra Laura Guadalete Sousa</h3>atiende a cada uno de sus pacientes siguiendo la mas avanzada metodología. Comienza con un estudio psicológico y conductual de cada paciente, para diseñar una sonrisa de a corde con su personalidad.</p>
                 <p>Para llevar a cabo esta metodología representativa, desde la primera consulta, se crea una admosfera de confianza mediante las primeras charlas. A partir de ese punto de vínculo, doctora, paciente, surgen necesidades intrisecas que ayudan a la doctora a estructurar un tratamieto personalizado</p>
@@ -167,6 +237,7 @@
 
     <script src="./proJS/animateMenu.js"></script>
     <script src="./proJS/ListOfMenu.js"></script>
+    <script src="./proJS/ref_email.js"></script>
 </body>
 
 </html>
