--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
         </nav>
     </header>
     <main>
-        <section class="profile_picture-under">
+        <section class="profile_picture-under" id="scrollable">
            
-            <video onloadedmetadata="this.muted=true" autoplay loop>
-                <source src="./videos/video_fondo.mp4" autoplay loop>
+            <video onloadedmetadata="this.muted=true" playsinline autoplay loop>
+                <source src="./videos/video_fondo.mp4" playsinline autoplay loop>
             </video>
+
             <!-- <div class="profile_picture">
                 <span class="orange_circle"></span>
                 <span class="pink_tiny_circle to_right"></span>
@@ -277,6 +278,7 @@
     <script src="./proJS/animateMenu.js"></script>
     <script src="./proJS/ListOfMenu.js"></script>
     <script src="./proJS/ref_email.js"></script>
+    <script src="./proJS/LGS-big_LOMenu.js"></script>
 </body>
 
 </html>
