resoluciones moviles ok

--- a/index.html
+++ b/index.html
@@ -140,11 +140,9 @@
             <div class="profile_information_content">
                 <div class="contente_description">
                     <h1>Dra. LAURA</h1>
-                    <p>Lider en el sector de la ortodoncia.
-                    </p>
+                    <p>Lider en el sector de la ortodoncia.</p>
                     <p>Especializada en ortodoncia invisible</p>
                     <p>Experta en estética dentofacial.</p>
-
                     
                 </div>
                 <div class="content_interactive_text">
