lista para moviles

--- a/index.html
+++ b/index.html
@@ -265,15 +265,31 @@
             
         </section>
         <section class="about">
-            <!-- <div class="nav-items">
-                <a class="nav_icons" href="#"><img src="./icons/linkedin.svg" alt=""></a>
-                <a class="nav_icons" href="#"><img src="./icons/mail.svg" alt=""></a>
-                <a class="nav_icons" href="#"><img src="./icons/whatsapp.svg" alt=""></a>
-            </div> -->
-            <div class="paragraph_continer">
-                <p>La<h3>Dra Laura Guadalete Sousa</h3>atiende a cada uno de sus pacientes siguiendo la mas avanzada metodología. Comienza con un estudio psicológico y conductual de cada paciente, para diseñar una sonrisa de a corde con su personalidad.</p>
-                <p>Para llevar a cabo esta metodología representativa, desde la primera consulta, se crea una admosfera de confianza mediante las primeras charlas. A partir de ese punto de vínculo, doctora, paciente, surgen necesidades intrisecas que ayudan a la doctora a estructurar un tratamieto personalizado</p>
+            <div class="content_text_personal_description">
+                <div class="referens_persoal_data">
+                    <h1>Dra. LAURA</h1>
+                    <p>Especializada en ortodoncia invisible.</p>
+                </div>
+                <h3>Ayuda profecional empática, paciente y asertiva.</h3>
             </div>
+            <div class="content_image_profile">
+                <img src="./image/risueña.jpg" alt="">
+
+                <div class="paragraph_continer">
+                    <p>La <strong>Dra. Laura Guadalete Sousa</strong> atiende a cada uno de sus pacientes siguiendo la mas <strong>avanzada metodología</strong>. 
+                        Comienza con un estudio psicológico y conductual de cada paciente, para <strong>diseñar</strong> una sonrisa de a corde con su personalidad.</p>
+                    <p>Para llevar a cabo esta <strong>metodología representativa</strong>, desde la primera consulta, se crea una <strong>admosfera de confianza</strong> 
+                        mediante las primeras charlas. A partir de ese punto de vínculo, doctora paciente, surgen necesidades intrisecas que ayudan a la doctora a estructurar un <strong>tratamieto personalizado</strong></p>
+                </div>
+            </div>
+            <div class="content_action_personal_data">
+                <p>Tu sonrisa es especial.</p>
+                <div class="button_action" id="emailButton3">
+                    <span class="in_black"></span>
+                    <p class="color_in_black">PIDE CITA</p>
+                </div>
+            </div>
+           
         </section>
         <section class="graphic_menu">
             <div class="card_menu card-for-tablet1">
