maqueta de paginas creada

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
             <ul class="forLGS-big">
                 <li class="list_item">
-                    <a class="nav_link" chref="#">Ortodoncia</a>
+                    <a class="nav_link" chref="./pages/ortodoncia.html">Ortodoncia</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html">Invisible</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
                     </ul>
                 </li>
