--- a/pages/endodoncia.html
+++ b/pages/endodoncia.html
@@ -4,8 +4,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dra Laura - Endodoncia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400&family=PT+Serif:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/indStyles.css">
+    <link rel="stylesheet" href="./styles/indMain.css">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-tablet.css" media="(min-width: 600px)">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-big.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="./mediaCSS/DraLGS-size-plus.css" media="(min-width: 1900px)">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <header>
+        <div class="header_menu">
+            <h1>Dra. LAURA GUADALETE SOUSA</h1>
+            <p>Odontóloga - Ortodoncista</p>
+            <div class="menu">
+                <span class="line1__bars-menu"></span>
+                <span class="line2__bars-menu"></span>
+                <span class="line3__bars-menu"></span>
+            </div>
+
+            <ul class="forLGS-big">
+                <li class="list_item">
+                    <a class="nav_link" chref="#">Ortodoncia</a>
+                    <ul class="link_show LGS-big_show1">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                    </ul>
+                </li>
+                <li class="list_item">
+                    <a class="nav_link" chref="#">Especialidades</a>
+                    <ul class="link_show LGS-big_show1">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="list_item">
+                    <a class="nav_link" chref="#">Otros Tratamientos</a>
+                    <ul class="link_show LGS-big_show1">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        Restauradora</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <nav class="nav_menu  nav__menu--click">
+            <a class="nav_list" href="#">Dra. Laura Guadalete Sousa</a>
+            <ul>
+                <li class="list_item">
+                    <div class="nav_button list_item--click">
+                        <a class="nav_link" chref="#">Ortodoncia</a>
+                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                    </div>
+
+                    <ul class="link_show">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                    </ul>
+                </li>
+                <li class="list_item">
+                    <div class="nav_button list_item--click">
+                        <a class="nav_link" chref="#">Especialidades</a>
+                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                    </div>
+
+                    <ul class="link_show">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento Dental</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="list_item">
+                    <div class="nav_button list_item--click">
+                        <a class="nav_link" chref="#">Otros Tratamientos</a>
+                        <img src="./icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
+                    </div>
+
+                    <ul class="link_show">
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                                Restauradora</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <footer>
+        <div class="footer">
+            <div class="content">
+                <a>COOKIES</a>
+                <a>PROTECCIÓN DE DATOS</a>
+                <a>AVISO LEGAL</a>
+                <a>CONTACTO</a> 
+            </div>
+            <div class="content signature">
+                <p>copyright 2023</p>
+                <h3>Laura Guadalete Sousa</h3>
+                <p> | Desarrollado por JNK-WedDEV</p>
+            </div>
+            <object data="./icons/jnk.svg" class="jnk" type=""></object>
+        </div>
+
+    </footer>
+
+
+    <script src="./proJS/animateMenu.js"></script>
+    <script src="./proJS/ListOfMenu.js"></script>
+    <script src="./proJS/ref_email.js"></script>
+    <script src="./proJS/LGS-big_LOMenu.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     
 </body>
 </html>
