--- a/pages/ortodoncia.html
+++ b/pages/ortodoncia.html
@@ -105,24 +105,27 @@
     <main>
         <section class="description" id="scrollable">
             <div class="pd_top"></div>
-            <div class="description_image_continer">
-                <img src="../image/aligner.jpg" alt="">
+            <div class="flex_big_size">
+                <div class="description_image_continer">
+                    <img src="../image/aligner.jpg" alt="">
+                </div>
+                <div class="description_text_continer">
+                    <h2>Ortodoncia invisible</h2>
+                    <h4>Trabajamos con los alineadores más transparentes y más cómodos.
+                        Además, han sido diseñados para que realicen un movimiento dental más eficiente y efectivo.
+                    </h4>
+                    <p>Con el empleo de fundas transparentes, conocidas como alineadores, y las manos expertas de 
+                        nuestra doctora, podemos tratar cualquier maloclusión dental del mismo modo que hacíamos 
+                        con los antiguos brackets. 
+                    </p>
+                    <p>
+                        Mediante el intercambio semanal de diferentes férulas, solucionamos en cuestión de 
+                        semanas aquellos problemas estéticos y funcionales que tanto han preocupado a los 
+                        pacientes durante años.
+                    </p>
+                </div>
             </div>
-            <div class="description_text_continer">
-                <h2>Ortodoncia invisible</h2>
-                <h4>Trabajamos con los alineadores más transparentes y más cómodos.
-                    Además, han sido diseñados para que realicen un movimiento dental más eficiente y efectivo.
-                </h4>
-                <p>Con el empleo de fundas transparentes, conocidas como alineadores, y las manos expertas de 
-                    nuestra doctora, podemos tratar cualquier maloclusión dental del mismo modo que hacíamos 
-                    con los antiguos brackets. 
-                </p>
-                <p>
-                    Mediante el intercambio semanal de diferentes férulas, solucionamos en cuestión de 
-                    semanas aquellos problemas estéticos y funcionales que tanto han preocupado a los 
-                    pacientes durante años.
-                </p>
-            </div>
+            
         </section>
         <section class="benefits">
             <div class="content_tittle_benefist">
@@ -142,6 +145,56 @@
                 </li>
                 <li>Es transparente, no lleva metales, y prácticamente no se nota.</li>
             </ul>
+        </section>
+
+        <section class="description conventional_orto" >
+            <div class="flex_big_size">
+                <div class="description_image_continer">
+                    <img src="../image/orto-convencional.jpg" alt="">
+                </div>
+                <div class="description_text_continer">
+                    <h2>Ortodoncia convencional</h2>
+                    <h4>Este tratamiento odontológico consiste en corregir, a través de presión mecánica, 
+                        la posición de las piezas dentales que no se encuentran alineadas de forma correcta 
+                        y que afectan la mordida y la apariencia de la sonrisa de las personas.
+                    </h4>
+                    <p>Es el procedimiento más identificado. También conocido como ortodoncia metálica o brackets, 
+                        se vale del uso de alambres de metal para fabricar aparatos a la medida de la boca del 
+                        paciente, estos son ajustados con ligaduras que presionan a los dientes hacia la posición que se desea.
+                    </p>
+                    <p>
+                        El objetivo de esta técnica es conseguir que los dientes y la mandíbula vuelvan a su equilibrio 
+                        natural y, por tanto, lograr una mejoría estética del paciente.
+                    </p>
+                </div>
+            </div>
+           
+        </section>
+        <section class="benefits">
+            <div class="content_tittle_benefist">
+                <img src="../icons/beneficios.svg" alt="">
+                <h2>Beneficios</h2>
+            </div>
+            <ul class="text_benefist">
+                <li>Es un tratamiento económico.
+                </li>
+                <li>Conseguimos armonía dental.</li>
+                <li>Logramos corrección dentaria</li>
+                <li>Prevenimos otras patologías futuras</li>
+                <li>En definitiva, es un tratamiento 
+                    que puede ayudar a mejorar la autoestima de los pacientes, reforzando 
+                    su seguridad gracias a la mejora de su estética.
+                </li>
+            </ul>
+        </section>
+        <section class="pending_action" >
+            <div class="content_action_personal_data">
+                <p>Tu sonrisa es única.</p>
+                <div class="button_action" id="emailButtonOrto">
+                    <span></span>
+                    <p class="color_in_black">PIDE CITA</p>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -166,8 +219,7 @@
 
     <script src="../proJS/animateMenu.js"></script>
     <script src="../proJS/ListOfMenu.js"></script>
-    <script src="../proJS/ref_email.js"></script>
-    <script src="../proJS/LGS-big_LOMenu.js"></script>
+    <script src="../proJS/orto.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
