carillas lista en todas las resoluciones

--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
                     <a class="nav_link" chref="./pages/ortodoncia.html">Ortodoncia</a>
                     <ul class="link_show LGS-big_show1">
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Especialidades</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/carillas.html">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/blanqueamiento.html">Blanqueamiento</a>
                         </li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Otros Tratamientos</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/odonto-rest.html">Odontología
                         Restauradora</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
         <nav class="nav_menu  nav__menu--click">
-            <a class="nav_list" href="#">Dra. Laura Guadalete Sousa</a>
+            <a class="nav_list this_page" href="#">Dra. Laura Guadalete Sousa</a>
             <ul>
                 <li class="list_item">
                     <div class="nav_button list_item--click">
@@ -71,8 +71,8 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Invisible</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html#brackets">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
@@ -82,9 +82,9 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento Dental</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/carillas.html">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/ortodoncia.html">Ortodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/blanqueamiento.html">Blanqueamiento Dental</a>
                         </li>
                     </ul>
                 </li>
@@ -95,9 +95,10 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
-                                Restauradora</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./pages/odonto-rest.html">Odontología
+                             Restauradora</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -310,19 +311,19 @@
                     data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-delay="200"
                 >
                     <img class="image_menu" src="./image/aligner.jpg" alt="">
-                    <a href="#">Ortodoncia</a>
+                    <a href="./pages/ortodoncia.html#brackets">Ortodoncia</a>
                 </div>
                 <div class="card_menu card-for-tablet2" data-aos="fade-up"
                     data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-easing="ease-in-out"
                 >
                     <img class="image_menu" src="./image/colorGuide.jpg" alt="">
-                    <a href="#">Especialidades</a>
+                    <a href="./pages/carillas.html">Especialidades</a>
                 </div>
                 <div class="card_menu card-for-tablet3" data-aos="fade-up"
                     data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-delay="400"
                 >
                     <img class="image_menu" src="./image/dientes.jpg" alt="">
-                    <a href="#">Otros Tratamientos</a>
+                    <a href="./pages/odonto-rest.html">Otros Tratamientos</a>
                 </div>
             </div>
 
