--- a/pages/ortodoncia.html
+++ b/pages/ortodoncia.html
@@ -35,37 +35,37 @@
             <ul class="forLGS-big">
                 <li class="list_item"><a class="nav_link" href="../index.html">Resumen</a></li>
                 <li class="list_item">
-                    <a class="nav_link" chref="#">Ortodoncia</a>
+                    <a class="nav_link this_page" chref="#">Ortodoncia</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="../index.html">Invisible</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="">Invisible</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Convencional</a></li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Especialidades</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./blanqueamiento.html">Blanqueamiento</a>
                         </li>
                     </ul>
                 </li>
                 <li class="list_item">
                     <a class="nav_link" chref="#">Otros Tratamientos</a>
                     <ul class="link_show LGS-big_show1">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./odonto-rest.html">Odontología
                         Restauradora</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
         <nav class="nav_menu  nav__menu--click">
-            <a class="nav_list" href="#">Dra. Laura Guadalete Sousa</a>
+            <a class="nav_list" href="../index.html">Dra. Laura Guadalete Sousa</a>
             <ul>
                 <li class="list_item">
                     <div class="nav_button list_item--click">
-                        <a class="nav_link" chref="#">Ortodoncia</a>
+                        <a class="nav_link this_page" chref="#">Ortodoncia</a>
                         <img src="../icons/chevron-down.svg" class="donw-arrow orto" alt="flecha hacia abajo">
                     </div>
 
@@ -81,9 +81,9 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Carillas</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./carillas.html">Carillas</a></li>
                         <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Ortodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Blanqueamiento Dental</a>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./blanqueamiento.html">Blanqueamiento Dental</a>
                         </li>
                     </ul>
                 </li>
@@ -94,8 +94,8 @@
                     </div>
 
                     <ul class="link_show">
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Endodoncia</a></li>
-                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="#">Odontología
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./endodoncia.html">Endodoncia</a></li>
+                        <li class="list_item list_sub_item"><a class="nav_sub_list" href="./odonto-rest.html">Odontología
                                 Restauradora</a></li>
                     </ul>
                 </li>
@@ -147,7 +147,7 @@
             </ul>
         </section>
 
-        <section class="description conventional_orto" >
+        <section class="description conventional_orto" id="brackets">
             <div class="flex_big_size">
                 <div class="description_image_continer">
                     <img src="../image/orto-convencional.jpg" alt="">
